force-app/main/default/objects/rfiConfiguration__c/rfiConfiguration__c.object-meta.xml
<CustomObject>
    <label>RFI Configuration</label>
    <nameField>
        <label>RFI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFI Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>