force-app/main/default/objects/rfiConfiguration__c/fields/antiSplinterFilm__c.field-meta.xml
<CustomField>
    <fullName>antiSplinterFilm__c</fullName>
    <label>Anti-Splinter Film</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>