force-app/main/default/objects/rfiConfiguration__c/fields/arSolution__c.field-meta.xml
<CustomField>
    <fullName>arSolution__c</fullName>
    <label>AR Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR Only – One Side</fullName>
            </value>
            <value>
                <fullName>AR Only – Double Side</fullName>
            </value>
            <value>
                <fullName>AR Only – Hole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>