force-app/main/default/objects/rfiConfiguration__c/fields/cncEdgeChamfer__c.field-meta.xml
<CustomField>
    <fullName>cncEdgeChamfer__c</fullName>
    <label>CNC Edge Chamfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Drawing</fullName>
            </value>
            <value>
                <fullName>Corning Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>