force-app/main/default/objects/rfiConfiguration__c/fields/etc__c.field-meta.xml
<CustomField>
    <fullName>etc__c</fullName>
    <label>ETC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>