force-app/main/default/objects/rfiConfiguration__c/fields/inkAdhesionXHatch__c.field-meta.xml
<CustomField>
    <fullName>inkAdhesionXHatch__c</fullName>
    <label>Ink Adhesion (X-hatch)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4B</fullName>
            </value>
            <value>
                <fullName>5B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>