force-app/main/default/objects/rfiConfiguration__c/fields/inkjetNeeded__c.field-meta.xml
<CustomField>
    <fullName>inkjetNeeded__c</fullName>
    <label>Inkjet Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inkjet -Normal</fullName>
            </value>
            <value>
                <fullName>Inkjet-Photorealistic-High-Res</fullName>
            </value>
            <value>
                <fullName>Inkjet-Photorealistic-Med-Res</fullName>
            </value>
            <value>
                <fullName>Inkjet-Photorealistic-Low-Res</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>