force-app/main/default/objects/rfiConfiguration__c/fields/innovationComment__c.field-meta.xml
<CustomField>
    <fullName>innovationComment__c</fullName>
    <label>Innovation Comment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>