force-app/main/default/objects/rfiConfiguration__c/fields/innovationType__c.field-meta.xml
<CustomField>
    <fullName>innovationType__c</fullName>
    <label>Innovation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Cover Glass</fullName>
            </value>
            <value>
                <fullName>Glass Ceramics</fullName>
            </value>
            <value>
                <fullName>AntiMicrobial</fullName>
            </value>
            <value>
                <fullName>non-CE AR</fullName>
            </value>
            <value>
                <fullName>EZ/AR</fullName>
            </value>
            <value>
                <fullName>AntiGlare (AG)</fullName>
            </value>
            <value>
                <fullName>Screen Protector</fullName>
            </value>
            <value>
                <fullName>SR+</fullName>
            </value>
            <value>
                <fullName>Next Gen SR+</fullName>
            </value>
            <value>
                <fullName>FPS</fullName>
            </value>
            <value>
                <fullName>Vibrant</fullName>
            </value>
            <value>
                <fullName>Glass Back</fullName>
            </value>
            <value>
                <fullName>DAR2.0</fullName>
            </value>
            <value>
                <fullName>ArtEng</fullName>
            </value>
            <value>
                <fullName>Phyllo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>