force-app/main/default/objects/rfiConfiguration__c/fields/ioxDol__c.field-meta.xml
<CustomField>
    <fullName>ioxDol__c</fullName>
    <label>Minimal IOX DOL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>