force-app/main/default/objects/rfiConfiguration__c/fields/numberOfSlots__c.field-meta.xml
<CustomField>
    <fullName>numberOfSlots__c</fullName>
    <label>Number of Through Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>