force-app/main/default/objects/rfiConfiguration__c/fields/panelMaker__c.field-meta.xml
<CustomField>
    <fullName>panelMaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel Maker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFI Configurations (Panel Maker)</relationshipLabel>
    <relationshipName>RFI_Configurations1</relationshipName>
    <type>Lookup</type>
</CustomField>