force-app/main/default/objects/rfiConfiguration__c/fields/screenPrintColors__c.field-meta.xml
<CustomField>
    <fullName>screenPrintColors__c</fullName>
    <label>Screen Print Black Matrix (BM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Special Requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>