force-app/main/default/objects/rfiConfiguration__c/fields/screenPrintComments__c.field-meta.xml
<CustomField>
    <fullName>screenPrintComments__c</fullName>
    <label>Screen Print Comments</label>
    <type>TextArea</type>
</CustomField>