force-app/main/default/objects/rfiConfiguration__c/fields/screenPrintDyne__c.field-meta.xml
<CustomField>
    <fullName>screenPrintDyne__c</fullName>
    <label>Screen Print Dyne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>33</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>37</fullName>
            </value>
            <value>
                <fullName>38</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>