force-app/main/default/objects/rfiConfiguration__c/fields/screenPrintLogo__c.field-meta.xml
<CustomField>
    <fullName>screenPrintLogo__c</fullName>
    <label>Screen Print Logo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>