force-app/main/default/objects/rfiConfiguration__c/fields/screenPrintOpticalDensity__c.field-meta.xml
<CustomField>
    <fullName>screenPrintOpticalDensity__c</fullName>
    <label>Screen Print Optical Density (OD)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>