force-app/main/default/objects/rfiConfiguration__c/fields/screenPrintOther__c.field-meta.xml
<CustomField>
    <fullName>screenPrintOther__c</fullName>
    <label>Screen Print Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P/N</fullName>
            </value>
            <value>
                <fullName>Alignment Mark</fullName>
            </value>
            <value>
                <fullName>Deco Film</fullName>
            </value>
            <value>
                <fullName>Other Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>