force-app/main/default/objects/rfiConfiguration__c/fields/screenPrintThicknessOfInk__c.field-meta.xml
<CustomField>
    <fullName>screenPrintThicknessOfInk__c</fullName>
    <label>Screen Print Thickness (microns)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>