force-app/main/default/objects/rfiConfiguration__c/fields/screenPrintTolerance__c.field-meta.xml
<CustomField>
    <fullName>screenPrintTolerance__c</fullName>
    <label>What is the Screen Printing Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corning Standard</fullName>
            </value>
            <value>
                <fullName>In Drawing</fullName>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>