force-app/main/default/objects/rfiConfiguration__c/fields/selectIoxDolCsValueTarget__c.field-meta.xml
<CustomField>
    <fullName>selectIoxDolCsValueTarget__c</fullName>
    <label>Select IOX DOL/CS Value Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corning Standard</fullName>
            </value>
            <value>
                <fullName>FIT Standard</fullName>
            </value>
            <value>
                <fullName>FIT - High CT</fullName>
            </value>
            <value>
                <fullName>Customized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>