force-app/main/default/objects/rfiConfiguration__c/fields/specialShapes__c.field-meta.xml
<CustomField>
    <fullName>specialShapes__c</fullName>
    <label>Glass Curvature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2D</fullName>
            </value>
            <value>
                <fullName>2.5D</fullName>
            </value>
            <value>
                <fullName>3D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>