force-app/main/default/objects/rfiConfiguration__c/fields/TPM__c.field-meta.xml
<CustomField>
    <fullName>TPM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TPM</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFI Configurations</relationshipLabel>
    <relationshipName>RFI_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>