force-app/main/default/objects/rfiConfiguration__c/fields/tX850nm__c.field-meta.xml
<CustomField>
    <fullName>tX850nm__c</fullName>
    <label>Tx@850nm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>85%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>